--- a/src/core/core.css
+++ b/src/core/core.css
@@ -12,7 +12,7 @@ body {
   -webkit-font-smoothing: antialiased;
 
   background-color: var(--mdw-theme-background);
-  color: var(--mdw-theme-text--on-background);
+  color: var(--mdw-theme-on-primary);
 }
 
 body.prevent-over-scroll {
@@ -39,23 +39,22 @@ body.prevent-over-scroll {
 
 
 ::-webkit-scrollbar {
-  width: 14px;
-  height: 14px;
+  width: 10px;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: var(--mdw-theme-background);
+  background-color: inherit;
 }
 
 ::-webkit-scrollbar-thumb {
   -webkit-border-radius: 7px;
   border-radius: 7px;
-  border: 2px solid var(--mdw-theme-background);
-  background-color: rgba(var(--mdw-theme-foreground--rgb), 0.4);
+  border: none;
+  background-color: rgba(var(--mdw-theme-on-primary--rgb), 0.24);
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgba(var(--mdw-theme-foreground--rgb), 0.6);
+  background-color: rgba(var(--mdw-theme-on-primary--rgb), 0.24);
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
